--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,4 +1,6 @@
-<h1>Add a picture!</h1>
+<h1>Add an image!</h1>
+<%= link_to "Back to Gallery", photos_path %>
+
 <%= form_for @photo do |f| %>
   <p>
     <%= f.label "title" %><br>
