--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,4 +1,5 @@
 <%= link_to "Back to Gallery", photos_path %>
+<%= link_to "Edit", edit_photo_path %>
 
 <p>
   <%= @photo[:title] %>, <%= @photo[:artist] %>
