--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,5 +1,4 @@
-<%= link_to "Back to Gallery", photos_path %>
-<%= link_to "Edit", edit_photo_path %>
+<%= link_to "Back to Gallery", photos_path %> | <%= link_to "Edit", edit_photo_path %> | <%= link_to "Delete", @photo, :confirm => "Are you sure you want to delete this image?", :method => :delete  %>
 
 <p>
   <%= @photo[:title] %>, <%= @photo[:artist] %>
